task assessment empty UI alignments fixed

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -810,9 +810,15 @@ body {
     }
 
     .select-something-container {
+      .image-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
       width: 100%;
       align-items: center;
       justify-content: center;
+      height: 100%;
       .image-container {
         img {
           max-width: 350px;
